syntax = "proto3";

package files_service;

import "google/protobuf/empty.proto";

service FilesService {
    rpc PushDoc (data) returns (google.protobuf.Empty);
    rpc SaveDoc (SavingData) returns (google.protobuf.Empty);
    rpc getDocByType (docId) returns (Doc);
    rpc getDocs (actId) returns (DocList);
    rpc downloadDoc (docId) returns (File);
}

message data {
    string actId = 1;
    string name = 2;
    string title = 3;
    string mimtype =4;
    bytes doc = 5;
}

message SavingData {
    string actId = 1;
    string docId = 2;
    bytes doc = 3;
}

message docId {
    string id = 1;
}

message Doc {
    string id = 1;
    string ydUrl = 2;
    string name = 3;
    string title = 4;
    bool downloadable = 5;
}

message actId {
    string id = 1;
}

message DocList {
    repeated Doc item = 1;
}

message File {
    bytes doc = 1;
    string name = 2;
}